<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="Good morning!"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSubStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:textSize="16sp"
                android:text="Ready to rent something?" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtCurrentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_border_container"
            android:fontFamily="@font/inter_bold"
            android:paddingLeft="10sp"
            android:paddingTop="5sp"
            android:paddingRight="10sp"
            android:paddingBottom="5sp"
            style="@style/PrimaryColor"
            android:text="$150.00"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/footerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/itemCarousel"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgLeftSide"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:alpha="0.2"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/imgMainSide"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/imgRightSide"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:alpha="0.2"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtStatusItem"
                    style="@style/StatusItemPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/inter_medium"
                    android:letterSpacing="0.1"
                    android:paddingLeft="12sp"
                    android:paddingTop="7sp"
                    android:paddingRight="12sp"
                    android:paddingBottom="7sp"
                    android:text="RENTED"
                    android:textAlignment="textEnd"
                    android:textSize="23sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipAttributes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.chip.Chip
                            style="@style/FilterTag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hot" />

                        <com.google.android.material.chip.Chip
                            style="@style/FilterTag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Guitar" />

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtInstrumentNameDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    style="@style/PrimaryColor"
                    android:text="Special Guitar"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:isIndicator="true"
                    android:rating="2.5" />

                <TextView
                    android:id="@+id/txtRentingPriceDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_black"
                    style="@style/SecondaryColor"
                    android:text="$180/mo"
                    android:textSize="60sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/accessoriesSeparator"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="1dp"
                    android:padding="0dp"
                    android:background="@color/default_stroke" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:letterSpacing="0.1"
                    android:textColor="@color/secondary_stroke"
                    android:fontFamily="@font/inter_light"
                    android:text="RENTED ACCESSORIES"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="1dp"
                    android:layout_marginLeft="0dp"
                    android:background="@color/default_stroke" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipAccessories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        style="@style/FilterTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hot" />

                    <com.google.android.material.chip.Chip
                        style="@style/FilterTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Guitar" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp">

        <Button
            android:id="@+id/btnNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/inter_bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Next"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="5dp"
            app:strokeColor="@color/default_stroke"
            app:strokeWidth="0.5dp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Button
            android:id="@+id/btnBorrowButton"
            app:cornerRadius="5dp"
            app:backgroundTint="@color/primary_color"
            app:strokeWidth="0.5dp"
            app:strokeColor="@color/primary_color"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/inter_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Borrow" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>