...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtProductNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="Special Guitar"
                android:textSize="21sp"
                android:textStyle="bold" />
...
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_input"
                        android:lines="1"
                        android:inputType="text"
                        android:id="@+id/txtNameEditText"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
...
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_input"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:id="@+id/txtEmailEditText"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtRentingPeriod"
                    android:layout_width="match_parent"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/renting_input"
                        android:lines="1"
                        android:text="1"
                        android:inputType="number"
                        android:id="@+id/txtRentingPeriodEditText"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
...
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Button
            android:id="@+id/btnConfirmButton"
            app:cornerRadius="5dp"
            app:backgroundTint="@color/primary_color"
            app:strokeWidth="0.5dp"
            app:strokeColor="@color/primary_color"
            android:textColor="@color/white"
            android:textSize="20sp"
...
