<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBackLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtProductNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="Sign in"
                android:textSize="21sp"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/footerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/navBar"
        app:layout_constraintTop_toBottomOf="@+id/navBar">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/inter_bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Sign in with Google"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/primary_color"
            app:cornerRadius="5dp"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="0.5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnTestingLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="Sign in (for testing purpose)"
        android:textColor="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footerButton" />


</androidx.constraintlayout.widget.ConstraintLayout>