<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Admin Page"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_aolang" />

        <Button
            android:id="@+id/btnLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>